[package]
name = "nagrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = {version = "0.4.19", features = ["serde"]}
regex = "1.5.5"
serde = {version = "1.0.136", features = ["derive"]}
thiserror = "1.0.30"
nagrs_derive = { path = "nagrs_derive" }
